- Fixed typo - New JavaScrip module (D3) for species tree
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1646 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,10 +2,10 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 10/12/13 11:50
+# Last modified: 22/01/14 12:06
 # Modified by:   kenneth
 #
-# Copyright 2013 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+# Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
 #
 
 # Form labels
@@ -406,6 +406,6 @@ label.assayName=Assay file name
 label.platform=Platform
 label.mafFileFound=There are metabolites identified\!\!
 menu.speciespageheader=Species selection page
-menu.speciespagedescription=See bellow direct links to some common model organisms and a wider list of all the organisms we have some information about.
-menu.speciesmodeltitle=Shortcuts to ...
-menu.speciesbrowsetitle=Not as short
+menu.speciespagedescription=See below for some direct links to some common model organisms and a wider list of all the organisms we have information about.
+menu.speciesmodeltitle=Model organisms
+menu.speciesbrowsetitle=Taxonomy Browser
