Fix bug: add space between Name and surname in contacts, entry page. Fix bug: Icons isappeared. new modrenizr script referenced in head.jsp Species page tweaks. not finished yet.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1651 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -409,3 +409,4 @@ menu.speciespageheader=Species selection page
 menu.speciespagedescription=See below for some direct links to some common model organisms and a wider list of all the organisms we have information about.
 menu.speciesmodeltitle=Model organisms
 menu.speciesbrowsetitle=Taxonomy Browser
+menu.speciesTypeSearch=Type it\!
