- Species browser hover color and font size - Text for search box
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1654 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 28/01/14 10:23
+# Last modified: 12/02/14 12:12
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -409,4 +409,4 @@ menu.speciespageheader=Species selection page
 menu.speciespagedescription=See below for some direct links to some common model organisms and a wider list of all the organisms we have information about.
 menu.speciesmodeltitle=Model organisms
 menu.speciesbrowsetitle=Taxonomy Browser
-menu.speciesTypeSearch=Type it\!
+menu.speciesTypeSearch=Taxonomy Search
