--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 21/02/14 09:13
+# Last modified: 24/02/14 16:29
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -220,7 +220,7 @@ msg.studyAccessRestricted=This is a PRIVATE study, you are not Authorised to vie
 msg.nothingFoundPersonal=You currently have no studies in MetaboLights. If you would like to submit some studies now go to our <a href="submittoqueue">Submit</a> page
 msg.indexed=Database indexed.
 msg.studyIndexed=Study indexed.
-msg.wsdl.error=The website is currently down. Please try after some time.
+msg.wsdl.error=The global EBI search provider is currently not respoding. Sorry for any inconvenience. Please try again later.
 msg.notindexed=You must be logged in as a curator to reindex.
 msg.showing=showing
 msg.to=to
