- Update to config files - Tweaked the statistics page (new fields + sort order)
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1674 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 3/27/14 4:04 PM
+# Last modified: 4/8/14 9:41 AM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -259,7 +259,10 @@ msg.deleteStudy.titleValidation=Deletion can't continue.
 msg.deleteStudyQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the study is finally deleted.\n\nThank you\!.
 msg.deleteStudyDialog.title=Confirmation required
 msg.deleteStudyDialog.body=Are you sure you want to delete this study?. All files and information stored will be removed and the accession number will not be available anymore.
-msg.statistics=MetaboLights study repository statistics
+msg.statistics=MetaboLights Statistics
+msg.statistics.data=Data in MetaboLights
+msg.statistics.compounds=MetaboLights compounds references from other databases
+msg.statistics.users=Registered users
 msg.useroptions=these are your account options.
 msg.useroptionscurator=As a curator, you may also want to ...
 msg.fetchingData=Fetching data...
