--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -74,7 +74,8 @@ label.ftpDownload=Download: Experiment
 # label.ftp=Files
 label.searchFilter=Filter your results
 label.publicDate=Select the public release date
-label.makestudypublic=Update release date
+label.updateReleaseDate=Update release date
+label.makeStudyPublic=Make it public
 label.updatestudy=Update study
 label.publictoprivate=Make study private
 label.deleteStudy=Delete study
@@ -414,3 +415,8 @@ menu.speciespagedescription=See below for some direct links to some common model
 menu.speciesmodeltitle=Model organisms
 menu.speciesbrowsetitle=Taxonomy Browser
 menu.speciesTypeSearch=Taxonomy Search
+label.viewAllFiles=View all files
+label.downloadstudy=Download whole study
+msg.noMetabolitesFound=This study does not contain any identified metabolites.
+label.Files=List of files
+label.downloadstudyMetadata=Download metadata
