--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -420,3 +420,6 @@ label.downloadstudy=Download whole study
 msg.noMetabolitesFound=This study does not contain any identified metabolites.
 label.Files=List of files
 label.downloadstudyMetadata=Download metadata
+label.fileListTableExplanation=List of study files (folder are not listed)
+label.fileListTableInstructions=To download a single file, just click on the file name. File will be zipped and served to you. To download multiple files, select them using the check boxes and click on download button.
+label.downloadSelectedFiles=Download selected files
