Share study dialog. With publis link and reviewer's link.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1682 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -423,3 +423,8 @@ label.downloadstudyMetadata=Download metadata
 label.fileListTableExplanation=List of study files (folder are not listed)
 label.fileListTableInstructions=To download a single file, just click on the file name. File will be zipped and served to you. To download multiple files, select them using the check boxes and click on download button.
 label.downloadSelectedFiles=Download selected files
+title.study.paper.link=Public link
+label.study.paper.link=Use this link to share this study publicly. Use it in any communication, paper, website.
+title.study.private.link=Reviewer's link
+label.study.private.link=Share this link only with reviewers or trusted people. Anyone with this link can access this PRIVATE study.
+label.study.share=Share it\!
