--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 4/8/14 9:41 AM
+# Last modified: 4/15/14 3:26 PM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -418,13 +418,13 @@ menu.speciesTypeSearch=Taxonomy Search
 label.viewAllFiles=View all files
 label.downloadstudy=Download whole study
 msg.noMetabolitesFound=This study does not contain any identified metabolites.
-label.Files=List of files
+label.Files=Study Files
 label.downloadstudyMetadata=Download metadata
 label.fileListTableExplanation=List of study files (folder are not listed)
 label.fileListTableInstructions=To download a single file, just click on the file name. File will be zipped and served to you. To download multiple files, select them using the check boxes and click on download button.
 label.downloadSelectedFiles=Download selected files
-title.study.paper.link=Public link
-label.study.paper.link=Use this link to share this study publicly. Use it in any communication, paper, website.
-title.study.private.link=Reviewer's link
-label.study.private.link=Share this link only with reviewers or trusted people. Anyone with this link can access this PRIVATE study.
+title.study.paper.link=Public Link
+label.study.paper.link=This is the official link you use to reference your study in any paper, website or other communication.
+title.study.private.link=Private Pre-Publication Link
+label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
 label.study.share=Share it\!
