--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 4/15/14 3:26 PM
+# Last modified: 4/16/14 9:28 AM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -424,7 +424,7 @@ label.fileListTableExplanation=List of study files (folder are not listed)
 label.fileListTableInstructions=To download a single file, just click on the file name. File will be zipped and served to you. To download multiple files, select them using the check boxes and click on download button.
 label.downloadSelectedFiles=Download selected files
 title.study.paper.link=Public Link
-label.study.paper.link=This is the official link you use to reference your study in any paper, website or other communication.
+label.study.paper.link=This is the official link for referencing your MetaboLights study in any paper, website or other communication.
 title.study.private.link=Private Pre-Publication Link
 label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
-label.study.share=Share it\!
+label.study.share=Share Study
