input box added to select/deselect files that matches the input text.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1690 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -428,3 +428,4 @@ label.study.paper.link=This is the official link for referencing your MetaboLigh
 title.study.private.link=Private Pre-Publication Link
 label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
 label.study.share=Share Study
+label.fileList.Input.placeholder=Type part of a name and press enter to select. Prepend ! to deselect.
