--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 4/16/14 9:28 AM
+# Last modified: 4/17/14 9:44 AM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -421,11 +421,11 @@ msg.noMetabolitesFound=This study does not contain any identified metabolites.
 label.Files=Study Files
 label.downloadstudyMetadata=Download metadata
 label.fileListTableExplanation=List of study files
-label.fileListTableInstructions=To download a single file, just click on the file name. File will be zipped and served to you. To download multiple files, select them using the check boxes and click on download button.
+label.fileListTableInstructions=To download a single file, just click on the file name. To download multiple files, use the check boxes and then click "Download selected files" button. Files will be zipped and downloaded to your browser.
 label.downloadSelectedFiles=Download selected files
 title.study.paper.link=Public Link
 label.study.paper.link=This is the official link for referencing your MetaboLights study in any paper, website or other communication.
 title.study.private.link=Private Pre-Publication Link
 label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
 label.study.share=Share Study
-label.fileList.Input.placeholder=Type part of a name and press enter to select. Prepend ! to deselect.
+label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
