Accomodate study Xref (SampleID...others) Bug fix: reintroduce highlight effect after clicking on "view files"
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1697 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -40,9 +40,9 @@ label.userJoinDate=Join date
 label.create=Create
 label.cancel=Cancel
 label.update=Update
-label.releaseDate=Study public release date
+label.releaseDate=Release date
 # label.pickReleaseDate=Public Date
-label.subDate=Study Submission Date
+label.subDate=Submited
 label.expFact=Study Factors
 label.expId=Study identifier
 label.subm=Submitted by
@@ -104,7 +104,7 @@ label.stats=Statistics
 label.paramHeader=MetaboLights Parameters
 label.paramName=Parameter Name
 label.paramValue=Parameter Value
-label.submittedId=Submitters original identifier
+label.StudyXrefs=Other identifiers
 UpdatePTPFailed=Updating study from public to private FAILED in
 
 title.serviceName=MetaboLights
