Accept studies if id is the same as any of the studyXrefs. Hash for tabs in config page. Rescue: Make study public link in study page. Clarify text for the Public release date box  (submission page).
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1698 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -23,7 +23,7 @@ label.isatabZipFile=Choose ISATAB archive file
 # label.filename=File name
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=Please pick a date for when your study will be public, today or in the future
+label.experimentMsgPublic=If you want your study to be <strong>private</strong> choose a date in the future.
 label.email=Email address
 # label.remind=Remind me
 label.resetPw=Reset password
