Add a "I can confirm I have validated" checkbox on the submission page
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1706 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -363,6 +363,7 @@ BIISubmit.dateEmpty=You must choose a date for the study to become public, this 
 BIISubmit.fileExtension=You must choose a zip file.
 BIISubmit.newAccNumbers=These are the new accession numbers:
 BIISubmit.fileUploadComplete=File upload complete for
+BIISubmit.notValidated=You must validate the study before submission.
 
 # Mail messages
 mail.noreplyaddress=no-reply@ebi.ac.uk
@@ -429,3 +430,4 @@ title.study.private.link=Private Pre-Publication Link
 label.study.private.link=Share this link with reviewers and other trusted parties. Anyone with this link can access your PRIVATE study.
 label.study.share=Share Study
 label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
+msg.confirmValidation=I confirm that this study successfully passes ISAcreator validation
