--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 4/17/14 9:44 AM
+# Last modified: 6/4/14 12:34 PM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -25,6 +25,7 @@ label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
 label.experimentMsgPublic=If you want your study to be <strong>private</strong> choose a date in the future.
 label.email=Email address
+label.apiToken=API token
 # label.remind=Remind me
 label.resetPw=Reset password
 label.oopsForgot=Forgot your password?
