--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 6/4/14 12:34 PM
+# Last modified: 6/30/14 10:16 AM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -230,7 +230,7 @@ msg.emailSent=Message Sent
 # msg.emailContactUsFrom=Message from MetaboLights website
 msg.emailContactUsTo=Message to the MetaboLights team
 msg.emailStudyLinkSubject=Regarding your MetaboLights Study
-msg.studySoonLive=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n\nKind Regards,
+msg.studySoonLive=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n
 msg.welcomeWithStudies=Hi {0}, you have {1} studie(s).
 msg.welcomeWithoutStudies=Hi {0}! You''ve not submitted any studies yet.
 # msg.submitted=You've submitted
