Statistics section "Most active submitters"
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1727 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 6/30/14 10:16 AM
+# Last modified: 7/3/14 1:32 PM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -265,6 +265,7 @@ msg.statistics=MetaboLights Statistics
 msg.statistics.data=Data in MetaboLights
 msg.statistics.compounds=MetaboLights compounds references from other databases
 msg.statistics.users=Registered users
+msg.statistics.topSub=Most active submitters
 msg.useroptions=these are your account options.
 msg.useroptionscurator=As a curator, you may also want to ...
 msg.fetchingData=Fetching data...
