--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,7 +2,7 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 7/3/14 1:32 PM
+# Last modified: 7/8/14 4:43 PM
 # Modified by:   kenneth
 #
 # Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
@@ -412,7 +412,7 @@ label.onBehalf=On behalf of
 label.measurement=Measurement
 label.assayName=Assay file name
 label.platform=Platform
-label.mafFileFound=There are metabolites identified\!\!
+label.mafFileFound=Reported Metabolites
 menu.speciespageheader=Species selection page
 menu.speciespagedescription=See below for some direct links to some common model organisms and a wider list of all the organisms we have information about.
 menu.speciesmodeltitle=Model organisms
