--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -89,7 +89,7 @@ label.studyDesign=Study Design Description
 label.protocols=Protocols
 label.data=Data
 label.assay=Assay
-label.sample=Sample
+label.sample=Samples
 label.publications=Publications
 label.organisms=Organism(s)
 label.experimentalFactors=Experimental Factors
