Importer refactor. ProcessReport class to report progress Importmetabolite page added to the webapp jmztab dependency version updated
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1763 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -254,7 +254,7 @@ msg.validation.invalid=The file has not passed the MetaboLights validation. Plea
 # msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are sure lots of people are looking forward to seeing your study, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
 # msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: {1}{0}
 msg.studyQueueSuccesfully= Thank you\! <br/><br/>You have successfully uploaded your study to our submission queue.\n\n<br/>You will receive further emails when your study is validated, processed and made available online.
-msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is finished.\n\nThank you\!.
+msg.PRDUpdateQueued=Your request has been successfully received and is now waiting to be processed.\n\nYou will receive and email when the updating proccess is end.\n\nThank you\!.
 msg.deleteStudy.userValidation=You are logged in as {0} and the owner of {1} is {2}. Only {2} can delete {1}.\n
 msg.deleteStudy.statusValidation={0} is PUBLIC therefore can't be deleted.\n
 msg.deleteStudy.titleValidation=Deletion can't continue.
@@ -433,3 +433,7 @@ label.study.private.link=Share this link with reviewers and other trusted partie
 label.study.share=Share Study
 label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 msg.confirmValidation=I confirm that this study successfully passes ISAcreator validation
+msg.importmetabolites.title=Import metabolites tool.
+msg.importmetabolites.status.title=Import metabolites status.
+msg.importmetabolites.status.noreport=Can't find any status report in this instance. Either the process is running in the other instance or it has finished already.
+msg.importmetabolites.status.noreport1=<a href="importmetabolites">Do you want to import metabolites from chebi?</a>
