--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -2,10 +2,21 @@
 # EBI MetaboLights - http://www.ebi.ac.uk/metabolights
 # Cheminformatics and Metabolism group
 #
-# Last modified: 7/8/14 4:43 PM
+# European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+#
+# Last modified: 10/17/14 1:24 PM
 # Modified by:   kenneth
 #
-# Copyright 2014 - European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
+# Copyright 2014 EMBL - European Bioinformatics Institute
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# Y
+# ou may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 #
 
 # Form labels
@@ -43,7 +54,7 @@ label.cancel=Cancel
 label.update=Update
 label.releaseDate=Release date
 # label.pickReleaseDate=Public Date
-label.subDate=Submited
+label.subDate=Submitted
 label.expFact=Study Factors
 label.expId=Study identifier
 label.subm=Submitted by
