- Changed tab header to "Metabolites"
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1794 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -422,7 +422,7 @@ label.onBehalf=On behalf of
 label.measurement=Measurement
 label.assayName=Assay file name
 label.platform=Platform
-label.mafFileFound=Reported Metabolites
+label.mafFileFound=Metabolites
 menu.speciespageheader=Species selection page
 menu.speciespagedescription=See below for some direct links to some common model organisms and a wider list of all the organisms we have information about.
 menu.speciesmodeltitle=Model organisms
