Bug fix: user could access not owned "study updates" forms usung get request and guessing the study id.
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1800 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -447,3 +447,5 @@ msg.importmetabolites.title=Import metabolites tool.
 msg.importmetabolites.status.title=Import metabolites status.
 msg.importmetabolites.status.noreport=Can't find any status report in this instance. Either the process is running in the other instance or it has finished already.
 msg.importmetabolites.status.noreport1=<a href="importmetabolites">Do you want to import metabolites from chebi?</a>
+msg.cantAccessPage.title=Access restricted.
+msg.cantAccessPage.message=You can't access this page. You might not be identidied or you are not allowed to reach it.
