--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -4,7 +4,7 @@
 #
 # European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
 #
-# Last modified: 2014-Nov-12
+# Last modified: 2014-Dec-16
 # Modified by:   kenneth
 #
 # Copyright 2014 EMBL - European Bioinformatics Institute
@@ -112,6 +112,7 @@ label.metabolites.formula=Formula
 label.sourceforge=Please use our <a href="http://sourceforge.net/tracker/?group_id=504460/">problem tracker</a> if you have found a bug or have any other suggestions for enhanced or new functionality
 label.ebiContact=You can also contact us using the global <a href="http://www.ebi.ac.uk/support/metabolights">EBI Support & Feedback form</a>
 label.stats=Statistics
+label.sab=Strategic Advisory Board
 label.paramHeader=MetaboLights Parameters
 label.paramName=Parameter Name
 label.paramValue=Parameter Value
