--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -4,10 +4,10 @@
 #
 # European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
 #
-# Last modified: 2014-Dec-16
+# Last modified: 2015-Jan-30
 # Modified by:   kenneth
 #
-# Copyright 2014 EMBL - European Bioinformatics Institute
+# Copyright 2015 EMBL - European Bioinformatics Institute
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -385,7 +385,7 @@ mail.queuedStudy.body=Hi {0}\n\nWe have received your submission, you uploaded t
 mail.submittedStudy.subject=Congratulations\! Your study {0} has been successfully processed\!
 mail.submittedStudy.body=We are happy to inform you that your submitted study ({0}) has been successfully processed. \n\nYour study is now identified in MetaboLights as {1}. \n\nThe public release date is {2}.\n\nFor private pre-publication access to your study, please see the "Share study" link at the top of the study page.\n\nMany thanks for your time and effort. You can access your study here\: {3}{1}.
 mail.errorInStudy.subject=We can not process {0}
-mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know submitting studies can be difficult.\n\n\n\nTechnical info for the MetaboLights team\:\n-------------------------------------------------------\nFile\:{0}\nError\:{3}\nServer Name:{2}
+mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know submitting studies can be challenging.\n\n\n\nTechnical info for the MetaboLights team\:\n-------------------------------------------------------\nFile\:{0}\nError\:{3}\nServer Name:{2}
 mail.updateStudy.subject=Study {0} updated.
 mail.updateStudy.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
 mail.publicReleaseDate.subject=Public release date of {0} updated.
