- Better error handling and email messages - +7 days as earlies publication date for *new* studies - Additional check in the sample file.  ISA libraries does this, but wanted additional control
git-svn-id: https://svn.code.sf.net/p/metabolomes/code/trunk@1852 71bfadd5-8d58-49b2-b2b0-ff0b8e09f556

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -4,7 +4,7 @@
 #
 # European Bioinformatics Institute (EMBL-EBI), European Molecular Biology Laboratory, Wellcome Trust Genome Campus, Hinxton, Cambridge CB10 1SD, United Kingdom
 #
-# Last modified: 2015-Jan-30
+# Last modified: 2015-Mar-11
 # Modified by:   kenneth
 #
 # Copyright 2015 EMBL - European Bioinformatics Institute
@@ -29,11 +29,12 @@ label.submit=Submit
 # label.search=search
 # label.searchMetabolights=Search MetaboLights
 label.file=File
-label.isatabZipFile=Choose ISATAB archive file
+label.isatabZipFile=Choose ISA-tab archive file
 # label.filename=File name
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=If you want your study to be <strong>private</strong> choose a date in the future.
+label.experimentMsgPublic=Your study will be <strong>private</strong> until the chosen date, minimum 7 days is required for our curation.
+label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission
 label.email=Email address
 label.apiToken=API token
 # label.remind=Remind me
@@ -161,7 +162,7 @@ msg.metabolightsAbout7=<a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/"
 msg.metabolightsAbout8=Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. You can also take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/plugin/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
-msg.metabolightsAbout11=We accept submissions in ISA-tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
+msg.metabolightsAbout11=We accept submissions in ISA-Tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
 msg.metabolightsAbout12=<a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip"><b>Pre-packaged ISAcreator download</b></a>. To make it easy for new users, please download and just unzip our pre-packaged ISAcreator with plugin and configurations.
 msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a href="http://sourceforge.net/projects/metabolomes/">here</a>.  To populate your local MetaboLights database, you simply upload experiments (Studies) of interest.
 msg.metabolightsAbout14=Help topics
@@ -184,7 +185,7 @@ msg.submCredentialsShort=Welcome to MetaboLights study submission
 msg.submHeader=In order to submit or update studies you need to log in or <a href="newAccount">create an account</a>
 msg.error.general=There was an unexpected error.<br/>
 msg.upload=A brand new study
-msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you.<BR/><BR/>Once you have used our guide <a href="help">"How to submit to MetaboLights"</a> to create your valid ISATab archive file, you can upload it using the file uploader below.
+msg.upload.desc=Thanks for choosing to submit a new study to MetaboLights. We use the <a href="http://www.isa-tools.org/">ISA-Tab</a> zip archive as a submission format in MetaboLights. We know that compiling your study information can be complicated so we have written a <a href="help">step-by-step guide</a> to help you.<BR/><BR/>Once you have used our guide <a href="help">"How to submit to MetaboLights"</a> to create your valid ISA-Tab archive file, you can upload it using the file uploader below.
 msg.upload.desc2=Here is the link to the <a href="help">"How to submit to MetaboLights"</a> guide.
 msg.upload.desc3=<b>IMPORTANT</b>: Please ensure your study has passed ISAcreator validation prior to submitting to MetaboLights. This validation is available in ISACreator, under "file","Validate ISAtab"
 msg.upload.notValid=Please provide a valid file name..
@@ -255,13 +256,13 @@ msg.makeStudyPrivatestudy.title=Make study private ({0}): {1}
 msg.updatestudy.msg=Thanks for updating your study! We currently do not provide an online update facility. You will need to use the <a href="http://www.isa-tools.org/">ISAcreator</a> software suite to update your study. You can download your study on the download button provided and load it into your ISACreator. We have created a <a href="help">step-by-step guide</a> to help you.
 # msg.updatestudy.ok.title=Study {0} updated.
 # msg.updatestudy.ok.msg=Congratulations\! You have updated the study {0}.
-msg.makestudypublic.nofilefound=The IsaTab zip file for the study {0} can not be found. Please contact the MetaboLights team.
+msg.makestudypublic.nofilefound=The ISA-tab zip file for the study {0} can not be found. Please contact the MetaboLights team.
 msg.makestudypublic.daterequired=The Public Release Date is a required field.
 msg.validation.studynotowned=You are not the owner of the study.
 msg.validation.publicstudynoteditable=A public study can not be modified.
 msg.validation.studyIdDoNotMatch=The file you are uploading has a wrong Study Identifier. The new file study identifier is {0} and you are trying to update the study {1}. Both have to match.
 msg.validation.backupFileExists=There is already a backup file for the study {0}. The process can not continue. Please contact MetaboLights team this is a technical problem.
-msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights IsaTab Configuration file.
+msg.validation.invalid=The file has not passed the MetaboLights validation. Please try to validate your file against our MetaboLights ISA-tab Configuration file.
 # msg.studytogopublic=Great news\! Your study {0} is about be publicly available on the {1}. \n\n We are sure lots of people are looking forward to seeing your study, but if you need more time to edit this study, please log in to MetaboLights and change the "Study Public Release Date". \nYou can find your private studies here http\://www.ebi.ac.uk/metabolights/mysubmissions\n\n Kind Regards, the MetaboLights team.
 # msg.studynowpublic=Great news! Your study {0} is now public.  Please see your excellent work in all it's glory here: {1}{0}
 msg.studyQueueSuccesfully= Thank you\! <br/><br/>You have successfully uploaded your study to our submission queue.\n\n<br/>You will receive further emails when your study is validated, processed and made available online.
