Updated lead dates to +28 days for new studies, +14 days for update release date

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ label.isatabZipFile=Choose ISA-tab archive file
 # label.filename=File name
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=Your study will be <strong>private</strong> until the chosen date, minimum 7 days is required for our curation.
+label.experimentMsgPublic=Your study will be <strong>private</strong> until the chosen date, minimum 28 days is required for our validaton and curation. To share a private study with journals and reviewers, please use the information available under the "Share study" link available after upload on your study details page.
 label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission
 label.email=Email address
 label.apiToken=API token
@@ -445,9 +445,10 @@ label.study.private.link=Share this link with reviewers and other trusted partie
 label.study.share=Share Study
 label.fileList.Input.placeholder=Type part of a filename and press enter to select. Prefix with ! to deselect.
 msg.confirmValidation=I confirm that this study successfully passes ISAcreator validation
+msg.contactMetabolightsAboutReleaseDate=To share a private study with journals and reviewers, please use the information available under the "Share study" link available on your study details page. To request an earlier publication date, please contact "metabolights-help@ebi.ac.uk"
 msg.importmetabolites.title=Import metabolites tool.
 msg.importmetabolites.status.title=Import metabolites status.
 msg.importmetabolites.status.noreport=Can't find any status report in this instance. Either the process is running in the other instance or it has finished already.
 msg.importmetabolites.status.noreport1=<a href="importmetabolites">Do you want to import metabolites from chebi?</a>
 msg.cantAccessPage.title=Access restricted.
-msg.cantAccessPage.message=You can't access this page. You might not be identidied or you are not allowed to reach it.
+msg.cantAccessPage.message=You are not authorised to access this page.
