--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -33,7 +33,7 @@ label.isatabZipFile=Choose ISA-tab archive file
 # label.filename=File name
 label.upload=Upload
 # label.experimentstatuspublic=Make it public now?
-label.experimentMsgPublic=Your study will be <strong>private</strong> until the chosen date, minimum 28 days is required for our validaton and curation. To share a private study with journals and reviewers, please use the information available under the "Share study" link available after upload on your study details page.
+label.experimentMsgPublic=Your study will be <strong>private</strong> until the chosen date, minimum 28 days is required for our validation and curation.
 label.pleaseValidate=It is <strong>VERY IMPORTANT</strong> that you successfully validate the study in ISAcreator before submission
 label.email=Email address
 label.apiToken=API token
