compound spectra upload - feature

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -53,6 +53,7 @@ label.create=Create
 label.cancel=Cancel
 label.update=Update
 label.releaseDate=Release date
+label.spectraFile=Choose Compound Reference Spectra file
 # label.pickReleaseDate=Public Date
 label.subDate=Submitted
 label.expFact=Study Factors
