Change "Public release date change" email message for a less "queueish" message.

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -389,7 +389,7 @@ mail.submittedStudy.body=We are happy to inform you that your submitted study ({
 mail.errorInStudy.subject=We can not process {0}
 mail.errorInStudy.body=There was a problem with your submitted study ({0}).\n\n{1}\nThe MetaboLights team has been made aware of the problem. Please, do not hesitate to contact us for help, we are happy to help as we know submitting studies can be challenging.\n\n\n\nTechnical info for the MetaboLights team\:\n-------------------------------------------------------\nFile\:{0}\nError\:{3}\nServer Name:{2}
 mail.updateStudy.subject=Study {0} updated.
-mail.updateStudy.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
+mail.updateStudy.body=Your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
 mail.publicReleaseDate.subject=Public release date of {0} updated.
 mail.publicReleaseDate.body=We are happy to inform you that your study ({0}) has been successfully updated. The public release date was set to {1}.\n\nMany thanks for your time and effort. You can access your study here\: {2}{0}.
 mail.queuedPRDUpdate.subject=Thank you! The public release date update for {0} is now waiting to be processed.
