WS: update status url + emails

--- a/metabolights-webservice/src/main/resources/messages_en.properties
+++ b/metabolights-webservice/src/main/resources/messages_en.properties
@@ -409,6 +409,12 @@ mail.studyDeleted.body=We are happy to inform you that your study ({0}) has been
 mail.studySoonLive.subject=Your MetaboLights study ({0}) will go public soon.
 mail.studySoonLive.body=Good news! \n\nThis is just a reminder that your study {0} will be publicly available on the {1}.\n
 
+mail.status.subject= Status of {0} updated to {1}
+mail.status.body.private= Your study ({1}) is {0}. You can make changes, even delete the study. Once you are happy with it the study has to go through a curation process. To do so, change the study status to {2}.
+mail.status.body.incuration= Your study ({1}) is {0}. You can't make changes. In this status, curators will make some changes to meet our curation policies and get it ready for the review process and later to be public.
+mail.status.body.inreview= Your study ({1}) is {0}. You can't make changes. In this status, curators and you should be happy with the study and it's ready to be reviewed. The study is not listed and not publicly accessible. Only those with this link:\n{2}\n can view it. Share this link with the journal if you study is being reviewed.\n\n Use this other link ( {3} )in your paper and other official communications.
+mail.status.body.public= Congratulations!. Your study ({1}) is now {0}. Now the metabolomics community can view and download it. It is searchable and soon will be exported to other search engines like http://metabolomexchange.org/. Please contact us if you think your study need any change or can be improved.
+
 
 #url.isatools=http://www.isa-tools.org/
 ##EBIheaders, remove http://www.ebi.ac.uk/ when deploying to EBI tomcats
