Updated the help pages

--- a/metabolights-webapps/src/main/resources/messages_en.properties
+++ b/metabolights-webapps/src/main/resources/messages_en.properties
@@ -138,7 +138,7 @@ menu.logout=log out
 menu.logoutCaps=Log Out
 menu.loggedInAs=Logged in as
 menu.contact=contact
-menu.submitHelp=How to submit data to MetaboLights
+//menu.submitHelp=How to submit data to MetaboLights
 menu.download=download
 menu.downloadHelp=Download data from MetaboLights
 menu.downloadplugin=Download latest metabolite identification plugin
@@ -159,14 +159,15 @@ msg.metabolightsAbout4=MetaboLights semantic quality will be based on various co
 msg.metabolightsAbout5=The development of MetaboLights is funded by the BBSRC, grant reference <a href="http://www.bbsrc.ac.uk/pa/grants/AwardDetails.aspx?FundingReference=BB/I000933/1">BB/I000933/1</a>.<br/>The funding is for a project that will instantiate, at the European Bioinformatics Institute (EBI) in Hinxton, Cambridge, UK, the MetaboLights metabolomics database with various different components focused on both data standards and primary experimental data. MetaboLights is cross-species, cross-application and will cover all relevant analytical methods.<br/><br/>MetaboLights is a joint development between the <a href="http://www.ebi.ac.uk/steinbeck/">Steinbeck group</a> at the European Bioinformatics Institute and the <a href="http://www.metabolomics.bioc.cam.ac.uk/metabolomics/">Griffin group</a> in Cambridge.
 msg.metabolightsAbout6=MetaboLights submissions are powered by the <a href="http://www.isa-tools.org/">ISA software suite.</a> so experimental data gets submitted in <a href="http://www.isa-tools.org/">ISA-Tab</a> format. The Investigation/Study/Assay (ISA) infrastructure is the first general-purpose format and freely available desktop software suite targeted to experimentalists, curators and developers and that assists in the reporting and local management of experimental metadata (i.e. sample characteristics, technology and measurement types, sample-to-data relationships) from studies employing one or a combination of technologies.
 msg.metabolightsAbout7=<a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/"><b>Experiments</b></a>. All public MetaboLights experiments can be downloaded from our public <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/studies/public/">ftp archive</a>.  Please find zip archives under the "studies" folder. Each public study can be found in the corresponding MTBLS-id folder. Complete experiments can be opened with <a href\="http\://isatab.sourceforge.net/tools.html">ISAcreator</a> or you can extract the archives using your normal unzip program.
-msg.metabolightsAbout8=Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. You can also take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
+msg.metabolightsAbout8=You can also take a look at the <a href="http://www.youtube.com/user/isatools/featured?gl=GB">isatools</a> YouTube channel for a general introduction to ISAcreator.
 msg.metabolightsAbout9=The latest version of the metabolite identification plugin for ISAcreator can be downloaded <a href\="ftp\://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/plugin/">here</a>.  \nPlease remember to place this in the "/Plugins" folder in your local ISAcreator installation.
 msg.metabolightsAbout10=The MetaboLights project is a member of <a href="http://www.isacommons.org/">isacommons</a>, the ISA community.
-msg.metabolightsAbout11=We accept submissions in ISA-Tab format. Please take a look at our comprehensive submissions <a href="https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view">guide</a> in Google docs. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
+msg.metabolightsAbout11=We accept submissions in ISA-Tab format. Please take a look at our comprehensive <a href="help">help</a> section. Alternatively <a href="contact">please contact us</a> us if you like to submit new studies.
 msg.metabolightsAbout12=<a href="ftp://ftp.ebi.ac.uk/pub/databases/metabolights/submissionTool/ISAcreatorMetaboLights.zip"><b>Pre-packaged ISAcreator download</b></a>. To make it easy for new users, please download and just unzip our pre-packaged ISAcreator with plugin and configurations.
 msg.metabolightsAbout13=If you want a local copy of the MetaboLights repository, please download and install MetaboLights from <a href="http://sourceforge.net/projects/metabolomes/">here</a>.  To populate your local MetaboLights database, you simply upload experiments (Studies) of interest.
 msg.metabolightsAbout14=Help topics
 msg.metabolightsAbout15=<p>For submission to <strong>MetaboLights</strong>, we require submissions to be in the ISA-Tab format. This format can be created and edited using a variety of spreadsheet tools.</p><p>We recommend two tools in particular for creation of ISA-Tab files and subsequent submission to our repository:</p><ul><li>ISAcreator: a standalone desktop application with a multitude of facilities to enable standards-compliant creation of ISA-Tab. More information is available from http://isa-tools.org; and</li><li>Google Spreadsheets with OntoMaton: OntoMaton is an add-on to Google Spreadsheets enabling ontology search and tagging within the collaborative Google Spreadsheet environment.</li></ul><br/><p>A Google Doc template for MetaboLights submissions will be coming soon</a>.</p><p>OntoMaton is developed and maintained by the <a href="http://isa-tools.org" target="_blank">ISA team</a>. You can find out more about <strong>OntoMaton</strong> from the project page <a href="http://github.com/ISA-tools/OntoMaton" target="_blank">http://github.com/ISA-tools/OntoMaton</a>. </p>
+msg.metaboLightsAbout16=Please take a look at our comprehensive <a href="help">help</a> section.
 
 msg.welcome=Welcome
 msg.backToMainPage=Back to the main page
@@ -402,17 +403,17 @@ url.isatools=http://www.isa-tools.org/
 url.EBIheaderTop=/inc/head.html
 url.EBIheaderFoot=/inc/foot.html
 
-help.url.guide=<a href=https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view
-help.url.baseUrl=<a href=https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view#heading=
-help.url.setup=h.2s8eyo1>General&nbsp;Setup</a>
-help.url.isasetup=h.17dp8vu>Download&nbsp;and&nbsp;setup&nbsp;ISAcreator</a>
-help.url.describe=h.3rdcrjn>Describe&nbsp;your&nbsp;Experiment</a>
-help.url.study=h.2bn6wsx>Create&nbsp;a&nbsp;Study</a>
-help.url.sample=h.vx1227>Sample&nbsp;Information</a>
-help.url.assay=h.2u6wntf>Assay&nbsp;Information</a>
-help.url.archive=h.26in1rg>Archive&nbsp;your&nbsp;experiment</a>
-help.url.account=h.2zbgiuw>Create&nbsp;a&nbsp;MetaboLights&nbsp;user&nbsp;account</a>
-help.url.submit=h.1egqt2p>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
+//help.url.guide=<a href=https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view
+//help.url.baseUrl=<a href=https://docs.google.com/document/d/1kvBdnleInVr1UMyV-sm91w2uK_IfkU11Rx-uxvILOFU/view#heading=
+//help.url.setup=h.2s8eyo1>General&nbsp;Setup</a>
+//help.url.isasetup=h.17dp8vu>Download&nbsp;and&nbsp;setup&nbsp;ISAcreator</a>
+//help.url.describe=h.3rdcrjn>Describe&nbsp;your&nbsp;Experiment</a>
+//help.url.study=h.2bn6wsx>Create&nbsp;a&nbsp;Study</a>
+//help.url.sample=h.vx1227>Sample&nbsp;Information</a>
+//help.url.assay=h.2u6wntf>Assay&nbsp;Information</a>
+//help.url.archive=h.26in1rg>Archive&nbsp;your&nbsp;experiment</a>
+//help.url.account=h.2zbgiuw>Create&nbsp;a&nbsp;MetaboLights&nbsp;user&nbsp;account</a>
+//help.url.submit=h.1egqt2p>Submit&nbsp;you&nbsp;study&nbsp;to&nbsp;MetaboLights</a>
 label.metabolites.smiles=Smiles
 label.metabolites.inchi=Inchi
 label.metabolites.multiplicity=Multiplicity
